# TokenViewer

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  LICENSE  PARSER_REVIEW.md  README.md  README.zh-CN.md  build-rust.sh  build.sh  index.html  run.sh
.github/workflows/: deploy-website.yml  release.yml  reusable-deploy-website.yml  windows-build.yml
assets/: index-C4FmTlpk.js  index-C_5uvcuV.js  index-DfljjLya.js
core/: Cargo.toml
core/examples/: test_sync.rs
core/src/: ffi.rs  lib.rs  models.rs
core/src/parsers/: antigravity.rs  claude.rs  codebuddy.rs  codex.rs  copilot.rs  craft.rs  cursor.rs  everycode.rs  gemini.rs  goose.rs  grok.rs  hermes.rs  kilocli.rs  kilocode.rs  kimi.rs  kiro.rs  mimocode.rs  mod.rs  ohmypi.rs  openclaw.rs  opencode.rs  pi.rs  roocode.rs  utils.rs  workbuddy.rs  zcode.rs  zed.rs
core/src/pricing/: data.rs  engine.rs  mod.rs
core/src/skills/: agent_registry.rs  git_engine.rs  install.rs  mod.rs  models.rs  provider_config.rs  scanner.rs  storage.rs  symlink.rs  watcher.rs
core/src/storage/: db.rs  mod.rs
core/src/sync/: mod.rs  scheduler.rs
core/tests/: integration.rs  parser_regressions.rs
docs/: index.html
docs/assets/: index-B2pFanAT.css  index-C6iJ2Sms.js  index-CyXhO9G1.js  index-G1T1iHwF.js
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  (+21 more)
macos/: default.profraw  project.yml
script/: release.sh  self_signed_codesign.sh  version.env  version_utils.sh  website_publish.sh  windows-release.ps1
website/: index.html  package-lock.json  package.json  vite.config.js
(+72 files in other folders)
