[package]
name = "tokenviewer-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
rayon = "1.10"
git2 = { version = "0.19", features = ["ssh"] }
notify = { version = "6", features = ["macos_kqueue"] }
walkdir = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
